syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.sum";
option java_outer_classname = "SumServiceProto";

service SumService {
  rpc CalculateSum (SumRequest) returns (SumResponse);
}

message SumRequest {
  repeated int32 numbers = 1;
}

message SumResponse {
  int32 sum = 1;
}
